# cle-engine

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  mise.toml  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
app/: __init__.py
app/admin/: __init__.py  dashboard.py
app/api/: README.md  __init__.py  config.py  context_retrieval_service.py  db.py  debug_logger.py  embeddings.py  embeddings_provider_gemini.py  evaluation_service.py  intelligence.py  llm_generation_service.py  main.py  perf_analytics.py  performance_metrics.py  practice_engine.py  provider_health.py  ranking_engine.py  recommendation_pipeline.py  recommendation_repository.py  recommendation_routes.py  recommendation_service.py  schemas.py  translation_service.py  unified_service.py
app/api/pipeline/: __init__.py  candidate_generator.py  contextual_pipeline.py  decision_policy.py  final_reranker.py
db_init/: 01_init.sql
docker/logrotate/: cle-engine
docker/vault/: README.md  run-with-vault-env.sh  vault-init.sh
docs/: testing-live-llm.md
frontend/: README.md  package.json  pnpm-lock.yaml  tsconfig.app.json
frontend/components/ui/: avatar.tsx  scroll-area.tsx  select.tsx  skeleton.tsx
frontend/src/: App.tsx  index.css
frontend/src/landing/: LandingPage.tsx
frontend/src/menu/: NavigationDrawer.tsx
frontend/src/practice/: PracticePage.tsx
models/final_reranker/: README.md  manifest.example.json
tests/: __init__.py  conftest.py
tests/live/: __init__.py  test_live_llm_flow.py  test_pipeline_integration.py
(+4 files in other folders)
