[project]
name = "cle-engine"
version = "0.1.0"
description = "A location-triggered language learning prototype that uses OCR automation to transform real-world text into a hyper-personalized, vector-ranked vocabulary feed."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.2",
    "psycopg2-binary>=2.9.11",
    "requests>=2.33.0",
    "ruff>=0.15.8",
    "streamlit>=1.55.0",
    "uvicorn>=0.42.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.24.0",
    "google-genai>=0.8.0",
]

[tool.pytest.ini_options]
markers = [
    "live: executes integration tests against real LLM and embedding providers",
    "asyncio: marks tests as async (deselect with '-m \"not asyncio\"')",
]
asyncio_mode = "auto"
